# cpp-OpenGL

./: .README.md  CMakeLists.txt  a.out
include/glad/: glad.h
src/: glad.c  main.cpp
